# PySongstats

./: .gitignore  README.md  pyproject.toml  requirements.txt
songstats/: __init__.py  client.py  constants.py  exceptions.py  models.py
tests/: test_client.py
