[project]
name = "python-songstats"
version = "0.1.1"
description = "Python client for Songstats API"
authors = [
    { name = "Mike Kremer", email = "mike@royalflow.app" },
]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "certifi==2025.6.15",
    "charset-normalizer==3.4.2",
    "dataclasses==0.6",
    "idna==3.10",
    "requests==2.32.4",
    "typing==3.7.4.3",
    "urllib3==2.5.0",
]

[project.urls]
Homepage = "https://github.com/DonMikone/PySongstats"
Repository = "https://github.com/DonMikone/PySongstats"

[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"